addBookToUser function implemented
